--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -10,7 +10,7 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('pictures/earth_background_3.jpg')no-repeat;
+    background: url('../pictures/earth_background_3.jpg')no-repeat;
 }
 .form-box{
     position: relative;
