--- a/src/styles/start.css
+++ b/src/styles/start.css
@@ -21,13 +21,16 @@ section{
     border-radius: 20px;
     backdrop-filter: blur(15px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 h2{
+    display: inline-block;
     font-size: 2em;
     color: #fff;
     text-align: center;
+    margin-bottom: 10px;
 }
 .inputbox{
     position: relative;
@@ -77,3 +80,39 @@ button{
     font-size: 1em;
     font-weight: 600;
 }
+.loading-container {
+    display: inline-block;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+.loading-dots {
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    margin-left: 0.5vw;
+    margin-bottom: 10px;
+  }
+  .dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 0 5px;
+    opacity: 0;
+    animation: dotAnimation 1.5s infinite;
+  }
+  
+@keyframes dotAnimation {
+   0% {
+    opacity: 0;
+  }
+    50% {
+    opacity: 1;
+  }
+    100% {
+    opacity: 0;
+   }
+  }
