--- a/src/styles/start.scss
+++ b/src/styles/start.scss
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 .start-container {
 
   *{
       margin: 0;
       padding: 0;
-      font-family: 'poppins',sans-serif;
   }
   section{
       display: flex;
@@ -13,11 +11,17 @@
       min-height: 100vh;
       width: 100%;
       background: url('../pictures/earth_background_3.jpg')no-repeat;
+      background-size: cover;
+      background-position:center;
+  }
+form{
+  width: 100%;
+  height: 15vh;
   }
   .form-box{
       position: relative;
-      width: 350px;
-      height: 400px;
+      width: 20vw;
+      height: 42vh;
       background: transparent;
       border: 2px solid rgba(255,255,255,0.5);
       border-radius: 20px;
@@ -33,54 +37,6 @@
       color: #fff;
       text-align: center;
       margin-bottom: 10px;
-  }
-  .inputbox{
-      position: relative;
-      margin: 30px 0;
-      width: 310px;
-      border-bottom: 2px solid #fff;
-  }
-  .inputbox label{
-      position: absolute;
-      top: 50%;
-      left: 5px;
-      transform: translateY(-50%);
-      color: #fff;
-      font-size: 1em;
-      pointer-events: none;
-      transition: .5s;
-  }
-  input:focus ~ label,
-  input:valid ~ label{
-  top: -5px;
-  }
-  .inputbox input {
-      width: 100%;
-      height: 50px;
-      background: transparent;
-      border: none;
-      outline: none;
-      font-size: 1em;
-      padding:0 35px 0 5px;
-      color: #fff;
-  }
-  .inputbox ion-icon{
-      position: absolute;
-      right: 8px;
-      color: #fff;
-      font-size: 1.2em;
-      top: 20px;
-  }
-  button{
-      width: 100%;
-      height: 40px;
-      border-radius: 40px;
-      background: #fff;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      font-size: 1em;
-      font-weight: 600;
   }
   .loading-container {
       display: inline-block;
@@ -118,11 +74,4 @@
       opacity: 0;
     }
     }
-  #Lock{
-    position: absolute;
-    width: 45px;
-    margin-left: 275px;
-    margin-top: 8px;
-  }
-
 }
